fix amazon icon alignment

--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -12,6 +12,10 @@ em {
   color: black;
 }
 
+.fa-amazon {
+  vertical-align: middle;
+}
+
 ul {
   list-style-type: square;
 }
